projects/vb6parse/snapshots/parsers/cst/library/datetime/time_statement/time_preserves_whitespace.snap
---
source: projects/vb6parse/tests/library/datetime/time_statement.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: TimeStatement
      children:
        - kind: TimeKeyword
          text: Time
        - kind: Whitespace
          text: "   "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: "   "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"12:00:00\""
    - kind: Whitespace
      text: "  "
    - kind: Newline
      text: "\n"
